// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Foundation/Buttons Disabled 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "color": "#00FF00",
              "opacity": 1,
              "paddingBottom": 15,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 15,
            }
          }
        >
          <Text
            color="font.primary"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                },
              ]
            }
          >
            Disabled
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Buttons Primary 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "opacity": 1,
              "paddingBottom": 15,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 15,
            }
          }
        >
          <Text
            color="white"
            style={
              Array [
                Object {
                  "color": "white",
                },
              ]
            }
          >
            Primary
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Buttons Secondary 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "opacity": 1,
              "paddingBottom": 15,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 15,
            }
          }
        >
          <Text
            color="font.primary"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                },
              ]
            }
          >
            Secondary
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Font Colors 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <View
            backgroundColor="background.base"
            color="background.primary"
            style={
              Array [
                Object {
                  "backgroundColor": "#2f3941",
                  "color": "#ffffff",
                },
              ]
            }
          >
            <Text
              color="font.white"
              fontSize="xxl"
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontSize": 32,
                  },
                ]
              }
            >
              White
            </Text>
          </View>
          <Text
            color="font.black"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontSize": 32,
                },
              ]
            }
          >
            Black
          </Text>
          <Text
            color="font.base"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#2f3941",
                  "fontSize": 32,
                },
              ]
            }
          >
            Base
          </Text>
          <Text
            color="font.primary"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 32,
                },
              ]
            }
          >
            Primary
          </Text>
          <Text
            color="font.secondary"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#828282",
                  "fontSize": 32,
                },
              ]
            }
          >
            Secondary
          </Text>
          <Text
            color="font.danger"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#ff6969",
                  "fontSize": 32,
                },
              ]
            }
          >
            Danger
          </Text>
          <Text
            color="font.grey100"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#f8f9f9",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey
          </Text>
          <Text
            color="font.grey100"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#f8f9f9",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 100
          </Text>
          <Text
            color="font.grey200"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#e9ebed",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 200
          </Text>
          <Text
            color="font.grey300"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#d8dcde",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 300
          </Text>
          <Text
            color="font.grey400"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#c2c8cc",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 400
          </Text>
          <Text
            color="font.grey500"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#87929d",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 500
          </Text>
          <Text
            color="font.grey600"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#68737d",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 600
          </Text>
          <Text
            color="font.grey800"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#2f3941",
                  "fontSize": 32,
                },
              ]
            }
          >
            Grey 800
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Font Families 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <Text
            color="font.primary"
            fontFamily="inter400"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 32,
                },
              ]
            }
          >
            Inter Regular 400
          </Text>
          <Text
            color="font.primary"
            fontFamily="inter700"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontFamily": "Inter-Bold",
                  "fontSize": 32,
                },
              ]
            }
          >
            Inter Bold 700
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Font Sizes 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <Text
            color="font.primary"
            fontSize="xs"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 10,
                },
              ]
            }
          >
            xs as 10px
          </Text>
          <Text
            color="font.primary"
            fontSize="s"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 12,
                },
              ]
            }
          >
            s as 12px
          </Text>
          <Text
            color="font.primary"
            fontSize="m"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 14,
                },
              ]
            }
          >
            m as 14px
          </Text>
          <Text
            color="font.primary"
            fontSize="l"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 18,
                },
              ]
            }
          >
            l as 18px
          </Text>
          <Text
            color="font.primary"
            fontSize="xl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 24,
                },
              ]
            }
          >
            xl as 24px
          </Text>
          <Text
            color="font.primary"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 32,
                },
              ]
            }
          >
            xxl as 32px
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Text Styles 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <Text
            color="font.primary"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontFamily": "Inter-Bold",
                  "fontSize": 18,
                },
              ]
            }
            textStyle="header"
          >
            Header
          </Text>
          <Text
            color="font.primary"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 14,
                },
              ]
            }
            textStyle="body"
          >
            Body
          </Text>
          <Text
            color="font.primary"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 12,
                },
              ]
            }
            textStyle="subtext"
          >
            Subtext
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
